src/objects/Resultado_CIFIN__c.object
<CustomObject>
    <fields>
        <fullName>Cifin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cifin</label>
        <referenceTo>Cifin__c</referenceTo>
        <relationshipLabel>Resultados CIFIN</relationshipLabel>
        <relationshipName>Resultados_CIFIN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Resultados CIFIN</relationshipLabel>
        <relationshipName>Resultados_CIFIN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LogRespuesta__c</fullName>
        <label>LogRespuesta</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Error__c</fullName>
        <label>Log Error</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Consulta__c</fullName>
        <label>No. Consulta</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resultados CIFIN</relationshipLabel>
        <relationshipName>Resultados_CIFIN</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tipo_Cliente__c</fullName>
        <label>Tipo Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deudor</fullName>
                </value>
                <value>
                    <fullName>Codeudor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resultado CIFIN</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Id Resultado CIFIN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados CIFIN</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>